scrollbar fixed

--- a/pages/styles/onboarding.module.scss
+++ b/pages/styles/onboarding.module.scss
@@ -54,7 +54,7 @@
 			justify-content: center;
 			opacity: 1;
 			visibility: visible;
-			overflow: scroll;
+			overflow: auto;
 
 			&.hidden {
 				opacity: 0;
@@ -62,6 +62,15 @@
 				visibility: hidden;
 				overflow: hidden;
 			}
+		}
+		.stepContainer::-webkit-scrollbar {
+			display: none;
+		}
+
+		/* Hide scrollbar for IE, Edge and Firefox */
+		.stepContainer {
+			-ms-overflow-style: none; /* IE and Edge */
+			scrollbar-width: none; /* Firefox */
 		}
 	}
 
